--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,14 @@
 
 html {
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+h1, h2, h3 {
+    font-weight: 400;
+    font-family: 'Orelega One', sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 a {
